5.0/basic/translate.md
!>5.0版本中已移除旧版本中的`公共翻译`，其稳定性太差已不再支持，请花一定时间注册以下至少一种翻译源，确保稳定的翻译体验，大部分在线翻译源也都有很多免费额度，正常情况上用不完的

## 各种翻译源对比
||免费额度|推荐等级|翻译质量|特点|
|:--:|:--:|:--:|:--:|:--:|
|[火山](/5.0/basic/translate#火山翻译)|200w字符/月|⭐⭐⭐⭐⭐|⭐⭐⭐⭐||
|[小牛](/5.0/basic/translate#小牛翻译)|20w字符/天|⭐⭐⭐⭐⭐|⭐⭐⭐⭐||
|[腾讯](/5.0/basic/translate#腾讯翻译)|500w字符/月|⭐⭐⭐⭐|⭐⭐⭐||
|[百度](/5.0/basic/translate#百度翻译)|100w字符/月|⭐⭐⭐⭐|⭐⭐⭐||
|[gpt](/5.0/basic/translate#ChatGPT翻译)|不免费，需自行购买额度|⭐⭐⭐|⭐⭐⭐⭐⭐|注册较麻烦，耗时比较高，不太适用于实时翻译，更适合图片翻译|
|[Sakura本地翻译模型](/5.0/basic/translate#Sakura本地翻译模型说明)|不限次数|⭐⭐⭐|⭐⭐⭐⭐⭐|部署难度较高，需要花较多精力，对显卡要求很高(8G显存及以上)|
|[阿里](/5.0/basic/translate#阿里翻译)|100w字符/每月|⭐⭐⭐|⭐⭐⭐||
|[彩云](/5.0/basic/translate#彩云小译)|`一次性`100w字符|⭐⭐|⭐⭐⭐⭐|在翻译二次元相关内容时表现较好|
|[有道](/5.0/basic/translate#有道翻译)|`一次性`约120w字符|⭐⭐|⭐⭐⭐||
|[团子](/5.0/basic/translate#团子翻译)|购买漫画or在线ocr服务时间内不限次数|⭐⭐|⭐⭐|不需要任何注册，打开开关就能使用，但翻译效果不如其他翻译源|


## 翻译源的注册与使用

- 翻译教程会有大量图片，如图片太小看不清楚，可以鼠标点击图片后会放大显示
- 如果点击了图片也没放大，可能网页未完全加载，可以摁<kbd>F5</kbd>键刷新网页后再点击图片

<!-- tabs:start -->

## **腾讯翻译**
## 腾讯翻译
!>如果注册后有腾讯的工作人员给你打电话，就说自己`用于学习外语使用`，或是直接挂断电话也可以,客服打你电话是以为你是有钱的大客户，于是来推销服务~~尽管并不是~~，总之不要在意就行

- 腾讯翻译免费额度为`500w字符/月`，`额度用完后也不会扣费`，只是无法继续使用翻译，用完时再换个接口即可

- [点击查看腾讯翻译使用量](https://console.cloud.tencent.com/tmt),如果提示登录，请先登录后重新点击此地址查看，筛选`近30天`使用量，没有超过500w就没事

1. [点击打开腾讯翻译注册网站](https://cloud.tencent.com/product/tmt)，右上角完成账号注册或登录
   - ![登录注册](../assets/img/26.webp ':size=50%')

2. 注册完成后点击`去实名认证`
   - ![立刻使用](../assets/img/27.webp ':size=50%')

3. 这里选择`开始个人认证`（在其他页面完成了个人认证也行）
    - ![开始个人认证](../assets/img/31.webp ':size=50%')

4. 姓名和身份证要真实，地址无所谓
    - ![个人信息](../assets/img/32.webp ':size=50%')

5. 微信扫码完成认证（用别的认证方法也行）
   - ![微信认证](../assets/img/33.webp ':size=50%')
   - ![完成认证](../assets/img/34.webp ':size=50%')

6. 完成个人认证后再[打开机器翻译页面](https://cloud.tencent.com/product/tmt)，点击`立即使用`
    - ![立即使用](../assets/img/35.webp ':size=50%')

7. 勾选协议，点击`开通付费版`，同样会有`500w字符/月免费额度`，用完后因为没钱也不会扣你钱，如之前未进行实名认证的在这完成实名也行
    - ![开通付费版](../assets/img/5550.webp ':size=50%')

8. 开通机器翻译后，再打开[新建密钥页面](https://console.cloud.tencent.com/cam/capi)
9. 点击下面的新建密钥
    - ![新建密钥](../assets/img/38.webp ':size=50%')

<!--
10. 弹出高风险提示时，`勾选不再提示`，然后`切换使用子账号密钥`
    - ![高风险提示](../assets/img/267.webp ':size=50%')
11. 选择快速创建
    - ![快速创建](../assets/img/268.webp ':size=50%')
12. 用户名随意填写，例如`dango`,之后配置`访问方式`和`用户权限`，访问方式`仅勾选编程访问`
    - ![用户名](../assets/img/269.webp ':size=50%')
    - ![编程访问](../assets/img/270.webp ':size=50%')
13. 配置用户权限麻烦一些，先`取消默认勾选的这个管理员权限`
    - ![默认勾选](../assets/img/271.webp ':size=50%')
    - ![取消勾选](../assets/img/272.webp ':size=50%')
14. 策略搜索栏输入`翻译`，点击搜索，勾选第一项，机器翻译全读写权限，然后确定
    - ![取消勾选](../assets/img/273.webp ':size=50%')
15. 点击`创建用户`，并完成一系列用户验证
    - ![取消勾选](../assets/img/274.webp ':size=50%')
16. 提示`成功新建用户`时，这里的`两行字符`就是我们需要的密钥，第二行点一下`显示`便会显示出来
    - 注意:复制密钥时，`不需要`复制前面的`SecretId:`或`SecretKey:`部分，只复制后面密钥部分即可
    - ![概况](../assets/img/275.webp ':size=50%')
17. 将得到的两个密钥复制到团子翻译器内`腾讯`的密钥编辑框
    - ![image-20241006104147238](./../assets/img/image-20241006104147238.webp ':size=50%')
18. 随后点击`测试`按钮，看能否正常使用，能正常使用后关闭密钥页面，并打开腾讯翻译的开关
    - ![输入密钥](../assets/img/251.webp ':size=50%')
    -->
19. 这里的`两行字符`就是我们需要的密钥，将得到的两个密钥复制到团子翻译器内`腾讯`的密钥编辑框
    - ![复制密钥](../assets/img/283.webp ':size=70%')
    - ![image-20241006104253561](./../assets/img/image-20241006104253561.webp ':size=50%')
20. 随后点击`测试`按钮，看能否正常使用，能正常使用后关闭密钥页面，并打开腾讯翻译的开关
	- ![image-20241006104952914](./../assets/img/image-20241006104952914.webp ':size=50%')
    - ![image-20241006104513625](./../assets/img/image-20241006104513625.webp ':size=50%')


?>[点此返回翻译器教程](/5.0/basic/dangotranslator#配置翻译源)

## **团子翻译**
## 团子翻译
- 我们团队自建的翻译引擎, `购买漫画or在线ocr服务时间`内不限次数
- 购买`在线ocr或漫画翻译服务时间内`，无需任何配置，打开开关即可使用
    - ![image-20241006104551787](./../assets/img/image-20241006104551787.webp ':size=50%')

?>[点此返回翻译器教程](/5.0/basic/dangotranslator#配置翻译源)

## **彩云小译**
## 彩云小译
!>如果注册后有彩云的工作人员给你打电话，就说自己`用于学习外语使用`，或是直接挂断电话也可以,客服打你电话是以为你是有钱的大客户，于是来推销服务~~尽管并不是~~，总之不要在意就行

- 彩云小译已改版，新用户免费额度只有一次性的`一个月有效期`的`100w字符`，用完后只能更换其他翻译源
- [点击查看彩云小译使用量](https://platform.caiyunapp.com/application/manage),显示的`今日剩余调用量`实际是全部剩余可免费使用的调用量

1. [点我打开彩云翻译注册网站](https://platform.caiyunapp.com/)
2. 使用邮箱完成注册并进行登录
3. 点击`立即认证`，然后是`个人开发者认证`

   - ![立即认证](../assets/img/175.webp ':size=50%')
   - ![个人开发者认证](../assets/img/176.webp ':size=50%')

4. 填写一些个人信息并绑定手机号，所属行业和应用场景随机填都行

   - ![填写个人信息](../assets/img/177.webp ':size=50%')

5. 点击提交后点击`创建应用`

   - ![创建应用](../assets/img/178.webp ':size=50%')

6. 应用设置这里，应用名称随便填写，接口类型一定要选择`翻译`，之后点击`新建`

   - ![应用设置](../assets/img/179.webp ':size=50%')

7. 应用类型为`翻译`的应用的`token`，就是翻译器需要的密钥

   - ![复制密钥](../assets/img/180.webp ':size=50%')

8. 将彩云的这个`token`复制粘贴到团子翻译器内`彩云翻译`的密钥编辑框
    - ![image-20241006104642709](./../assets/img/image-20241006104642709.webp ':size=50%')

9. 随后点击`测试`按钮，看能否正常使用，能正常使用后关闭密钥页面，并打开彩云翻译的开关
	- ![image-20241006105755950](./../assets/img/image-20241006105755950.webp ':size=50%')
    - ![输入密钥](../assets/img/247.webp ':size=50%')

?>[点此返回翻译器教程](/5.0/basic/dangotranslator#配置翻译源)

## **阿里翻译**
## 阿里翻译
!>如果注册后有阿里的工作人员给你打电话，就说自己`用于学习外语使用`，或是直接挂断电话也可以,客服打你电话是以为你是有钱的大客户，于是来推销服务~~尽管并不是~~，总之不要在意就行

- 阿里翻译免费额度为`100w字符/每月`，`超出部分按100w字符/50元计费`，如果超出字符，且账号没有余额，最多会产生一个小时内的欠费账单，具体参考[阿里云机器翻译产品定价](https://help.aliyun.com/document_detail/197134.html)
- [点击查看阿里翻译使用量](https://mt.console.aliyun.com/service)

1. [点我打开阿里云网站](https://www.aliyun.com/),点击`右上角登录/注册`
2. 建议使用下面的支付宝或淘宝直接登录，可以省去实名认证
   - ![支付宝或淘宝登录](../assets/img/192.webp ':size=50%')

3. 登录完成并实名认证后，打开[阿里云机器翻译](https://www.aliyun.com/product/ai/base_alimt)页面,点击`立即开通`
   - ![点击立即开通](../assets/img/193.webp ':size=50%')

4. 勾选用户协议，点击`立即开通`
   - ![勾选用户协议](../assets/img/194.webp ':size=50%')

5. 点击管理控制台
   - ![点击管理控制台](../assets/img/195.webp ':size=50%')

6. 鼠标移到右上角头像上，点击`AccessKey管理`
   - ![点击AccessKey管理](../assets/img/196.webp ':size=50%')

7. 选择`继续使用AccessKey`，(如对安全有需求，也可以选择`开始使用子用户AccessKey`，并对子账号`添加翻译相关权限`)
   - ![继续使用AccessKey](../assets/img/197.webp ':size=50%')

8. 点击`创建AccessKey`，并通过短信校验等认证方式
   - ![创建密钥](../assets/img/198.webp ':size=50%')

9. 复制这里的两个密钥到团子翻译器内`阿里云`的密钥编辑框
   - ![复制密钥1](../assets/img/199.webp ':size=50%')
   - ![image-20241006110531633](./../assets/img/image-20241006110531633.webp ':size=50%')

10. 随后点击`测试`按钮，看能否正常使用，能正常使用后关闭密钥页面，并打开阿里翻译的开关
	- ![image-20241006110705016](./../assets/img/image-20241006110705016.webp ':size=50%')
    - ![image-20241006110732393](./../assets/img/image-20241006110732393.webp ':size=50%')

?>[点此返回翻译器教程](/5.0/basic/dangotranslator#配置翻译源)

## **火山翻译**
## 火山翻译
!>如果注册后有火山的工作人员给你打电话，就说自己`用于学习外语使用`，或是直接挂断电话也可以,客服打你电话是以为你是有钱的大客户，于是来推销服务~~尽管并不是~~，总之不要在意就行

- 火山翻译免费额度为`200w字符/月`，`额度用完后会继续扣费`,请留意该翻译源的额度使用情况，避免造成账号欠费
- [点击查看火山翻译使用量](https://console.volcengine.com/translate/usage)

1. [点我打开火山翻译网站](https://www.volcengine.com/),点击`右上角登录或立即注册`
   - ![注册或登录](../assets/img/225.webp ':size=50%')

2. 登录完成后，[点我跳转实名认证页面](https://console.volcengine.com/user/authentication/)

3. 点击个人认证，建议使用`扫码认证(需要抖音app)`或是`银行卡认证`，按提示完成相应操作
   - ![个人认证](../assets/img/226.webp ':size=50%')
   - ![扫码认证](../assets/img/227.webp ':size=50%')
   - ![认证成功](../assets/img/228.webp ':size=50%')

4. 认证成功后，[点我跳转开通翻译页面](https://console.volcengine.com/translate)

5. 勾选协议并点击`立即开通`
   - ![点击立即开通](../assets/img/229.webp ':size=50%')
   - ![开通成功](../assets/img/230.webp ':size=50%')

6. 开通翻译成功后，[点我跳转api访问密钥管理页面](https://console.volcengine.com/iam/identitymanage/user)

7. 点击`新建密钥`,然后`继续创建`，再输入手机验证码完成身份验证
	- ![image-20241117012054631](./../assets/img/image-20241117012054631.webp ':size=50%')
	- ![image-20241117012126544](./../assets/img/image-20241117012126544.webp ':size=50%')

8. 这里所展示的就是翻译器需要的密钥对，点击密钥的显示按钮，然后`继续显示`
    - ![image-20241117012646714](./../assets/img/image-20241117012646714.webp ':size=50%')
    - ![image-20241117012721305](./../assets/img/image-20241117012721305.webp ':size=50%')

9. 分别点击两个密钥的复制按钮，将这里的两个密钥复制到团子翻译器内`火山`的密钥编辑框
    - ![image-20241117012918076](./../assets/img/image-20241117012918076.webp ':size=50%')
    - ![image-20241006110824223](./../assets/img/image-20241006110824223.webp ':size=50%')
<!--
6. 开通翻译成功后，[点我跳转用户管理页面](https://console.volcengine.com/iam/identitymanage/user)

7. 点击`新增用户`,选择`通过用户名创建`
   - ![新增用户](../assets/img/231.webp ':size=50%')
   - ![通过用户名创建](../assets/img/232.webp ':size=50%')

8. 用户名可以填写`dango_translator`，勾选`编程访问`，再点击下一步
    - ![新建用户](../assets/img/233.webp ':size=50%')

9. 在搜索框内输入`翻译`,`勾选`得到的两个选项，作用范围选择`全局`，再点击下一步
    - ![权限设置](../assets/img/234.webp ':size=50%')

10. 信息确认无误后点击`提交`
    - ![点击提交](../assets/img/235.webp ':size=50%')

11. 回到这个用户管理界面后，点击`管理`
    - ![点击管理](../assets/img/236.webp ':size=50%')

12. 点击`密钥`，分别点击两个复制按钮，将这里的两个密钥复制到团子翻译器内`火山`的密钥编辑框
    - ![复制密钥1](../assets/img/237.webp ':size=50%')
    - ![image-20241006110824223](./../assets/img/image-20241006110824223.webp ':size=50%')
-->

10. 随后点击`测试`按钮，看能否正常使用，能正常使用后关闭密钥页面，并打开火山翻译的开关
    - ![image-20241006112022731](./../assets/img/image-20241006112022731.webp ':size=50%')
    - ![image-20241006110950632](./../assets/img/image-20241006110950632.webp ':size=50%')

?>[点此返回翻译器教程](/5.0/basic/dangotranslator#配置翻译源)

## **百度翻译**
## 百度翻译
!>如果注册后有百度的工作人员给你打电话，就说自己`用于学习外语使用`，或是直接挂断电话也可以,客服打你电话是以为你是有钱的大客户，于是来推销服务~~尽管并不是~~，总之不要在意就行

- 百度翻译免费额度为`100w字符/月`，`额度用完后也不会扣费`，只是无法继续使用翻译，用完时再换个接口即可
- [点击查看百度翻译使用量](https://fanyi-api.baidu.com/api/trans/product/desktop),如果提示登录，请先登录后重新点击此地址查看

1. [点击打开百度翻译注册网站](https://fanyi-api.baidu.com/product/11)，完成登录后点击`立刻使用`

    - ![立刻使用](../assets/img/11.webp ':size=50%')

2. 然后选择个人开发者，并填写自己相关信息

    - ![个人开发者](../assets/img/12.webp ':size=50%')

3. 点击确定

    - ![进入认证](../assets/img/13.webp ':size=50%')

4. 选择`高级版`，并到下面填写自己个人信息，点击立刻实名
    - ![立刻实名](../assets/img/14.webp ':size=50%')
    - 如果你碰到此处`没有填写姓名和身份证的地方`，可采用如下解决办法
    - 按<kbd>Ctrl</kbd>+<kbd>F5</kbd>强制刷新一下网页，然后稍等一会儿
    - 也可以换浏览器重试，[chrome](https://www.google.cn/chrome/)，[firefox](https://www.mozilla.org/zh-CN/firefox/windows)，[edge](https://www.microsoft.com/zh-cn/edge)三选一，不要用国产浏览器

5. 点击开通服务
    - ![开通服务](../assets/img/15.webp ':size=50%')

6. 选择通用翻译
    - ![通用翻译](../assets/img/16.webp ':size=50%')

7. 开通高级版
    - ![开通高级版](../assets/img/17.webp ':size=50%')

8. 点击下一步
    - ![下一步](../assets/img/18.webp ':size=50%')

9. 应用名称随便填，例如填写`翻译器`，然后别的东西都不用填，`提交申请`就行了，这个没人工审核，会直接通过的
    - ![提交申请](../assets/img/19.webp ':size=50%')

10. 服务开通后点击`总览`
    - ![点击总览](../assets/img/20.webp ':size=50%')

11. 页面滑到最下面，有个申请信息，里面是`appid和密钥`
    - ![申请信息](../assets/img/21.webp ':size=50%')

12. 将得到的appid和密钥复制粘贴到团子翻译器内`百度`的密钥编辑框
    - ![image-20241006111150025](./../assets/img/image-20241006111150025.webp ':size=50%')

13. 随后点击`测试`按钮，看能否正常使用，能正常使用后关闭密钥页面，并打开百度翻译的开关
	- ![image-20241006111235144](./../assets/img/image-20241006111235144.webp ':size=50%')
    - ![image-20241006111301909](./../assets/img/image-20241006111301909.webp ':size=50%')

?>[点此返回翻译器教程](/5.0/basic/dangotranslator#配置翻译源)

## **小牛翻译**
## 小牛翻译
!>如果注册后有小牛的工作人员给你打电话，就说自己`用于学习外语使用`，或是直接挂断电话也可以,客服打你电话是以为你是有钱的大客户，于是来推销服务~~尽管并不是~~，总之不要在意就行

- 小牛翻译免费额度为`每天20w字符`(每日100积分，1积分可使用2000字符)，`超出免费额度后无法使用`，用完后建议更换其他翻译源
- [点击查看小牛翻译使用量](https://niutrans.com/cloud/service/integral)

1. [点我打开小牛翻译网站](https://niutrans.com/),点击`免费注册`，建议选择手机号注册

    - ![image-20241107230601765](./../assets/img/image-20241107230601765.webp ':size=50%')

    - ![image-20241107230517237](./../assets/img/image-20241107230517237.webp ':size=50%')

2. 注册完成后，点击`返回登录`，回到登录页面后，使用`手机`方式再次登录，登录后点击右上角`控制台`
    - ![23-02-31](./../assets/img/23-02-31.webp ':size=50%')

    - ![image-20241107230816057](./../assets/img/image-20241107230816057.webp ':size=50%')
    
3. 点击左侧`个人中心`，点击右侧翻译api区域，api-key的`复制`按钮，将复制得到的密钥填到团子翻译器内`小牛`的密钥编辑框

    - ![image-20241107231221484](./../assets/img/image-20241107231221484.webp ':size=50%')

    - ![image-20241006111427062](./../assets/img/image-20241006111427062.webp ':size=50%')

7. 随后点击`测试`按钮，看能否正常使用，能正常使用后关闭密钥页面，并打开小牛翻译的开关
    - ![image-20241006111519046](./../assets/img/image-20241006111519046.webp ':size=50%')
    - ![image-20241006111541115](./../assets/img/image-20241006111541115.webp ':size=50%')

?>[点此返回翻译器教程](/5.0/basic/dangotranslator#配置翻译源)

## **有道翻译**
## 有道翻译
!>如果注册后有有道的工作人员给你打电话，就说自己`用于学习外语使用`，或是直接挂断电话也可以,客服打你电话是以为你是有钱的大客户，于是来推销服务~~尽管并不是~~，总之不要在意就行

- 有道翻译免费额度为`10元代金券，约可以翻译20w字符`，添加客服微信后，并再登记完成一些信息，可再获得`50元代金券,约100w字符`，`超出部分按100w字符/50元计费`，用完后建议更换其他翻译源
- [点击查看有道翻译使用量](https://ai.youdao.com/console/#/finance-overview)，主要看体验金剩余多少，体验金归0就无法使用了

1. [点我打开有道智云网站](https://ai.youdao.com/),点击`右上角登录/注册`
    - ![注册或登录](../assets/img/212.webp ':size=50%')

2. 完善信息这里随便填就行
    - ![完善信息](../assets/img/213.webp ':size=50%')

3. 这里的有道的客服微信号可以加一下，回答他的一些登记问题就能领取剩下`50元代金券`
    - ![客服微信号](../assets/img/214.webp ':size=50%')

4. 点击跳过接入指南
    - ![跳过接入](../assets/img/215.webp ':size=50%')

5. 进行实名认证，选择`个人认证`，完善相关信息
    - ![实名认证1](../assets/img/216.webp ':size=50%')
    - ![实名认证2](../assets/img/217.webp ':size=50%')
    - ![实名认证3](../assets/img/218.webp ':size=50%')

6. 左侧选择`文本翻译`，右上角点击`创建应用`
    - ![创建应用](../assets/img/219.webp ':size=50%')

7. 按照下面图片填写应用信息
    - ![填写应用信息](../assets/img/220.webp ':size=50%')
    - ![创建成功](../assets/img/221.webp ':size=50%')

8. 点击左侧`业务总览`，分别点击两个复制按钮，将这里的应用id和应用密钥复制到团子翻译器内`有道`的密钥编辑框
    - ![复制密钥](../assets/img/222.webp ':size=50%')
    - ![image-20241006111637881](./../assets/img/image-20241006111637881.webp ':size=50%')
9. 随后点击`测试`按钮，看能否正常使用，能正常使用后关闭密钥页面，并打开有道翻译的开关
    - ![image-20241006111752398](./../assets/img/image-20241006111752398.webp ':size=50%')
    - ![image-20241006111813619](./../assets/img/image-20241006111813619.webp ':size=50%')

?>[点此返回翻译器教程](/5.0/basic/dangotranslator#配置翻译源)

## **ChatGPT翻译**
## ChatGPT翻译
!> 首先你需要清楚，你真的需要这个翻译源吗
- ChatGPT能提供基于语义的精确翻译，但耗时需要5s-10s，对于有实时翻译需求的人，并不适用
- ChatGPT无法使用国内手机号进行注册，需要购买国外临时手机号，约花费14元人民币
- ChatGPT在注册完成后，会获得有效期3个月的5美元额度劵，期间使用ChatGPT时，都会消耗其中金额，三个月后；或5美元消耗完毕时，都将无法继续使用
- 直接注册的gpt免费账户请求速率非常低，`每分钟限制3次请求`，频繁调用接口会拒绝翻译
- 仍有需求的可以按以下教程进行注册，以下教程是官方gpt api接口,但翻译器也是支持第三方gpt接口，或其他符合openai协议的模型接口的，如去某宝搜索`gpt中转`等关键词也能搜到第三方接口和密钥，最后将店主给的地址与密钥填入到翻译器的gpt设置内即可使用

### 注册教程
1. 首先访问[国外手机号网站](https://sms-activate.org/)注册一个用户
2. 点击右上角充值，支付方式向下滑动找到支付宝
   - ![点击充值](../assets/img/158.webp ':size=50%')
   - ![找到支付宝](../assets/img/159.webp ':size=50%')
3. 最低需要充值2美元，加上手续费0.1美元，并扫码完成支付，用来之后购买国外手机号码
   - ![输入充值金额](../assets/img/160.webp ':size=50%')
4. 再访问[openai网站](https://platform.openai.com/signup)，用邮箱完成注册，或使用微软，谷歌等第三方账号完成登录
   - ![注册或登录openai](../assets/img/285.webp ':size=50%')
5. 在完善个人信息的过程中，会出现这个索要手机号的页面，这时回到之前的[国外手机号网站](https://sms-activate.org/)
   - ![索要手机号页面](../assets/img/167.webp ':size=50%')
6. 在左侧搜索栏输入`openai`，选择第一个结果，再选择手机号国家，可以选第一个`印度尼西亚`，点击旁边的购物车
    - 印度尼西亚的手机号不一定可用，可以多次购买手机号，或购买其他国家手机号
   - ![搜索openai](../assets/img/161.webp ':size=50%')
   - ![选择印尼](../assets/img/162.webp ':size=50%')
7. 此时网页中间就显示了一个手机号，手机号中的前两位是国家区号，不用复制这个区号，将后面的数字(不包括括号)复制或单独记下
   - 注意，这个手机号只有20分钟有效期，购买后需要尽快完成openai的注册
   - ![选择印尼](../assets/img/165.webp ':size=50%')
8. 切换到openai页面，国家选择`印度尼西亚`，英文名是`Indonesia`,并输入刚刚复制的手机号，下面的提问选择`NO`，再点击发送验证码
   - ![索要手机号页面](../assets/img/164.webp ':size=50%')
9. 切换到海外手机号页面，等待一会儿，会显示收到的验证码
   - ![手机号验证码](../assets/img/166.webp ':size=50%')
10. 切换到openai页面，填入验证码，完成openai账号注册
11. 登录成功后，点击左侧**api keys**,然后点击页面中间的 **Create new secret key** 新建密钥
    - ![api keys页面](../assets/img/286.webp ':size=50%')
12. 随便输入一个密钥备注名，如dango，点击创建，然后复制
    - 注意这里的密钥仅会显示一次，如果忘记了或没有复制，只能删了重新新建
    - ![新建密钥](../assets/img/287.webp ':size=50%')
    - ![复制密钥](../assets/img/288.webp ':size=50%')
13. 将复制的密钥填入到翻译器ChatGPT密钥页面
    - ![image-20241006112236189](./../assets/img/image-20241006112236189.webp ':size=50%')
14. 之后需要配置代理地址，在这方面翻译器不提供相关教程，只教如何填写，若使用的软件是`clash`，clash默认的端口是7890，翻译器内则填写`127.0.0.1:7890`即可
    - 其他软件需要得知代理端口是多少，一般在打开`windows设置-网络和internet-代理`页面，可以看到代理端口是多少，翻译器内则填写`127.0.0.1:端口号`
      - ![查看代理端口](../assets/img/276.webp ':size=50%')
    - ![填入配置代理](../assets/img/240.webp ':size=50%')
15. 其他的配置项
    - api接口地址默认为官方接口地址`https://api.openai.com/v1/chat/completions` ，一般不需要更改此项，如果有自建代理源，才需要更改，另外，这里需要填写完整的接口地址，例如商家只提供了一个域名`https://xxx.com`，后面需要自己接上完整的接口地址，如`https://xxx.com/v1/chat/completions`
    - 可以根据自己账号的权限选择不同的gpt模型，一般账号都是拥有gpt3.5的模型权限
    - 联系上下文开启后, chatgpt会联系之前翻译过的句子场景进行翻译, 可能会提高翻译准确率, 但是会消耗更多的翻译额度，最大句子数为10
    - 催眠话术不建议修改原有话术内容，随意修改可能导致翻译结果无法解析，建议在话术最底部增加自己的条目
16. 随后点击`测试`按钮，看能否正常使用，能正常使用后关闭密钥页面，并打开gpt翻译的开关;若不可用，请检查代理软件或代理地址是否可用
    - ![image-20241006112309152](./../assets/img/image-20241006112309152.webp ':size=50%')

17. gpt正式付费与提高速率(非必须流程，看个人需求，经常使用gpt翻译可以考虑付费)
    - 上面教程所注册的免费账户，只有3个月有效期的5美元免费额度，且最大请求速率非常低`每分钟限制3次`
    - gpt在绑定`国外信用卡`付费后可以提高请求速率，上面教程注册的免费账户的最大请求速率仅为`每分钟3次`，付费后的前48小时最大速率为`每分钟60次`，付费48h后最大速率为`每分钟3500次`，绑卡地址为[gpt官网绑定信用卡页面](https://platform.openai.com/account/billing/overview)
    - 绑定仅支持注册地为国外的信用卡，国内办理的visa，master等国际卡都无法绑定，绑定国外虚拟信用卡也可能导致封号的情况，并不推荐
    - 国内用户若希望付费来提高速率，建议搜索引擎搜索`第三方gpt平台`付费使用，并修改api接口地址(举例来说，若平台仅提供了`https://xxxx.net`这样的域名，接口地址应在后面加上`/v1/chat/completions`，即翻译器内api接口地址填写`https://xxxx.net/v1/chat/completions`)，这些平台基本都是花钱购买点数后，使用他们的接口地址和他们的token进行请求就行(具体接口地址和token获取见平台各自文档)
    - 第三方gpt平台仅供参考，平台所产生的费用与团子翻译器无关

## **Sakura本地翻译模型**
## Sakura本地翻译模型说明
!> 本翻译源需要较强电脑方面的动手能力，需要至少8G显存以上的显卡(30系显卡及以上)，`不推荐所有人使用`
- Sakura是模型的名称，还需要启动器才可以运行，可选的启动器有两种，[llama启动器](/5.0/basic/translate#Sakurallama教程)和[tgw启动器](/5.0/basic/translate#Sakuratgw教程),任选一种就行，比较推荐llama启动器
- Sakura开源的语言聊天模型，类比的话就是gpt聊天模型，翻译器只是通过prompt将其变为了翻译源
- 一般来讲，模型的后缀数字越大(如7b和13b),对显存要求越高，翻译质量也会更好，sakura—13b的模型能近似与gpt3.5的翻译质量,但同时要求显卡有14G以上显存;显卡弱一些的也可以试试GalTransl-7B模型，需要8G显存，针对galgame单独做过优化，在翻译效果上也很不错

### 查看电脑是否支持运行本地翻译模型
1. 在系统任务栏底部右键，点击`任务管理器`
   - ![打开任务管理器](../assets/img/303.webp ':size=30%')

2. 点击`性能`，`GPU0`(如果存在多个GPU，选择更下面的那个)，查看`专用GPU内存大小`，如图为12G显存，就满足了模型运行要求的最低8G显存，否则不建议使用本地翻译模型，请更换其他在线翻译源
   - 同时确认下右上角名称是否为`NVIDIA GeForce RTX`开头，即显卡是N卡才能运行，如果是A卡(AMD显卡)或核显，模型无法运行
   - ![查看显存](../assets/img/304.webp ':size=100%')

## Sakura(llama)教程
1. 先[查看电脑是否支持运行本地翻译模型](/5.0/basic/translate#查看电脑是否支持运行本地翻译模型),确认显卡为N卡，且显存至少大于8G
2. 下载llama启动器，在下列下载链接中选择一个打开，并下载其中的`sakura-launcher-cuda12-b2859.zip`文件
    - [百度网盘](https://pan.baidu.com/s/1YoEZzWjwqkK78ulQlQg5rg?pwd=2859)
    - [GitHub](https://github.com/FishHawk/sakura-launcher/releases/tag/b2859)
    - [OneDriver](https://1drv.ms/f/s!AjPIUNMWbIi0gU_eT41gJ6RAayk0)
   
3. 接下来需要下载模型文件，根据你要翻译的内容是日文还是英文选择对应的模型(其他小语种暂不支持)，然后根据显存大小下载其中一种模型就行
   - `sakura系列模型`，只支持日语
     - `sakura-7b-lnovel-v0.9-Q4_K_M.gguf`模型，运行需要至少8g显存
         - [HuggingFace国外源](https://huggingface.co/SakuraLLM/Sakura-7B-LNovel-v0.9-GGUF/blob/main/sakura-7b-lnovel-v0.9-Q4_K_M.gguf) / [国内镜像源](https://hf-mirror.com/SakuraLLM/Sakura-7B-LNovel-v0.9-GGUF/blob/main/sakura-7b-lnovel-v0.9-Q4_K_M.gguf)
     - `sakura-14b-qwen2beta-v0.9.2-iq4xs.gguf`模型，运行需要至少12g显存
       - [HuggingFace国外源](https://huggingface.co/SakuraLLM/Sakura-14B-Qwen2beta-v0.9.2-GGUF/blob/main/sakura-14b-qwen2beta-v0.9.2-iq4xs.gguf) / [国内镜像源](https://hf-mirror.com/SakuraLLM/Sakura-14B-Qwen2beta-v0.9.2-GGUF/blob/main/sakura-14b-qwen2beta-v0.9.2-iq4xs.gguf)
   - `qwen系列模型`，只支持英文
     - `qwen-1.5-7b-chat-q8_0.gguf`模型，运行需要至少8g显存
       - [HuggingFace国外源](https://huggingface.co/Qwen/Qwen1.5-7B-Chat-GGUF/blob/main/qwen1_5-7b-chat-q8_0.gguf) / [国内镜像源](https://hf-mirror.com/Qwen/Qwen1.5-7B-Chat-GGUF/blob/main/qwen1_5-7b-chat-q8_0.gguf)
     - `qwen-1.5-14b-chat-q8_0.gguf`模型，运行需要至少12g显存
       - [HuggingFace国外源](https://huggingface.co/Qwen/Qwen1.5-14B-Chat-GGUF/blob/main/qwen1_5-14b-chat-q8_0.gguf) / [国内镜像源](https://hf-mirror.com/Qwen/Qwen1.5-14B-Chat-GGUF/blob/main/qwen1_5-14b-chat-q8_0.gguf)
   - ![下载](../assets/img/298.webp ':size=50%')

4. 模型文件下载后，将其放在llama启动器解压后的`sakura-launcher`开头的文件夹内，如`sakura-launcher-cuda11-b2859`文件夹内
   - ![移动模型](../assets/img/299.webp ':size=100%')
5. 双击该文件夹下的`启动Sakura服务器-显卡.bat`开始运行模型，会打开一个黑窗
6. 打开黑窗后5s左右，黑窗开始输出包含`info`的文本,说明已经成功运行，最小化此黑窗后，再回到翻译器界面
   - ![模型正常运行](../assets/img/305.webp ':size=100%')
   - 如果显示了`请按任意键退出`，说明运行失败了，可能是显卡显存不够用，请更换其他在线翻译源或显存要求更低的模型
   - ![模型运行失败](../assets/img/306.webp ':size=100%')
6. 在Sakura(llama)的`设置`这里，也可以将上述的`启动Sakura服务器-显卡.bat`添加至模型启动器位置，更方便打开模型
   - ![关联位置](../assets/img/300.webp ':size=100%')
7. 点击Sakura(llama)的`测试`，看模型是否运行成功(如下图)，测试成功后再打开该翻译源接口
   - ![关联位置](../assets/img/301.webp ':size=100%')
   - ![测试成功](../assets/img/307.webp ':size=70%')
   - 若提示测试出错，可截图Sakura模型运行的黑色窗口，并发送到用户群寻求帮助
   

## Sakura(tgw)教程
1. 部署和安装教程很长，具体可参考[tgw部署视频](https://www.bilibili.com/video/BV15F4m1j7Yf/?share_source=copy_web&vd_source=260cad55a891c7cebca042140c9ecd70&t=257)

2. 确认tgw完成部署并运行模型后，打开翻译器内该翻译源的开关，并点击测试，看能否正常运行
   - ![测试tgw](../assets/img/302.webp ':size=100%')


<!-- tabs:end -->